<resources>
    <string name="app_name">MyMoRegistration"</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="capture_button">Capture Image From Camera</string>
    <string name="desc">capture image place holder</string>
    <string name="pre_accept_terms_ans_conditions_description">กรุณาเซ็นชื่อเพื่อยอมรับเงื่อนไขและข้อตกลง</string>
    <string name="accept_terms_ans_conditions_description">การกดปุ่มด้านล่างถือเป็นการยินยอมเงื่อนไขและข้อตกลง\nในการสมัครใช้บริการ MyMo</string>
    <string name="accept_button">ยอมรับเงื่อนไขและข้อตกลง</string>
    <string name="next_button">ถัดไป</string>
    <string name="signature_hint">กรุณาเซ็นชื่อในช่องนี้เพื่อยอมรับเงื่อนไขและข้อตกลงในการสมัครใช้บริการ MyMo</string>
    <string name="take_photo_description">กรุณาถ่ายรูปผู้สมัคร\nให้ใบหน้าอยู่ภายในกรอบที่กำหนด</string>
    <string name="register_mymo_successful">สมัครใช้บริการ MyMo เรียบร้อยแล้ว</string>
    <string name="success_description">โปรดตรวจสอบว่ารหัสเปิดใช้งาน\nถูกส่งไปถึงผู้เปิดใช้บริการแล้ว</string>
    <string name="main_menu">กลับสู่เมนูหลัก</string>
</resources>