<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFFFFFF"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.github.gcacace.signaturepad.views.SignaturePad
            android:id="@+id/signature_pad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#80FFFFFF"
            app:penColor="@android:color/black" />

        <TextView
            android:id="@+id/sign_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/signature_hint"
            android:textColor="#707070"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/eraser_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:padding="20dp"
            android:visibility="invisible">

            <ImageButton
                android:id="@+id/eraser_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="top"
                android:layout_marginBottom="2dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ic_eraser"
                android:tint="#707070" />

            <TextView
                android:id="@+id/eraser_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="3dp"
                android:gravity="bottom"
                android:text="ลบ"
                android:textColor="#707070"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#80FFFFFF"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#99707070" />


        <TextView
            android:id="@+id/agreement_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            android:text="@string/accept_terms_ans_conditions_description"
            android:textColor="#707070"
            android:textSize="24sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="334dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="27dp"
            android:background="@drawable/btn_round_transparent"
            android:text="@string/accept_button"
            android:textColor="#707070"
            android:textSize="24sp"
            android:visibility="invisible" />

    </LinearLayout>


</LinearLayout>